classDiagram
    direction LR

    %% --- Styles ---
    classDef core fill:#0284c7,stroke:#38bdf8,stroke-width:3px,color:#fff
    classDef config fill:#16a34a,stroke:#4ade80,stroke-width:2px,color:#fff
    classDef event fill:#d97706,stroke:#fcd34d,stroke-width:2px,color:#fff
    classDef viewport fill:#9333ea,stroke:#c084fc,stroke-width:2px,color:#fff
    classDef plugin fill:#be185d,stroke:#f472b6,stroke-width:2px,color:#fff
    classDef react fill:#334155,stroke:#94a3b8,stroke-width:2px,color:#fff
    classDef abstract fill:#000,stroke:#fff,stroke-width:1px,stroke-dasharray: 5 5,color:#fff
    classDef utility fill:#0e7490,stroke:#22d3ee,stroke-width:2px,color:#fff

    %% --- React Layer ---
    class ReactComponents {
        CanvasContainer
        App
    }
    class ReactComponents react

    %% --- Context Layer ---
    class CanvasContext {
        +CanvasEngine engine
        +ConfigsManager configs
        +initialize()
        +getPlugin(id)
    }
    class CanvasContext core

    %% --- Core Engine ---
    class CanvasEngine {
        +loadGraph(nodes)
        +getNodeAtPosition(pos)
        +screenToWorld(pos)
        +addNode(node)
        +zoom(delta, point)
    }
    class CanvasEngine core

    class ViewportManager {
        +x, y, zoom
        +setViewport()
        +pan(dx, dy)
        +zoomTo(point)
    }
    class ViewportManager viewport

    class CoordinateSystem {
        +screenToWorld()
        +worldToScreen()
        +getVisibleBounds()
        +constrainToWorld()
    }
    class CoordinateSystem utility

    %% --- Configuration ---
    class ConfigsManager {
        +ViewportConfig
        +ThemeConfig
        +UIConfig
        +subscribe(key, callback)
        +set(key, value)
    }
    class ConfigsManager config

    class ComponentRegistry {
        +register(type, component)
        +get(type)
        +initialize()
    }
    class ComponentRegistry config

    %% --- Events ---
    class EventBus {
        +on(event, callback)
        +emit(event, data)
        +once(event, callback)
    }
    class EventBus event

    %% --- Plugin System ---
    class BasePlugin {
        <<Abstract>>
        +id
        +name
        +initialize(engine)
        +activate()
        +render() ReactNode
    }
    class BasePlugin abstract

    class NodeLayerPlugin {
        +render() NodeLayer
    }
    class NodeLayerPlugin plugin

    class GridPlugin {
        +render() Grid
    }
    class GridPlugin plugin

    class MinimapPlugin {
        +render() Minimap
    }
    class MinimapPlugin plugin

    class ToolbarPlugin {
        +render() Toolbar
    }
    class ToolbarPlugin plugin

    class NodePickerPlugin {
        +render() NodePicker
        +handleContextMenu(event)
    }
    class NodePickerPlugin plugin

    class DebugPlugin {
        +render() DebugOverlay
        +showFPS()
    }
    class DebugPlugin plugin

    %% --- Relationships ---
    ReactComponents ..> CanvasEngine : User Input
    
    CanvasContext *-- CanvasEngine : Owns
    CanvasContext *-- ConfigsManager : Owns
    CanvasContext o-- BasePlugin : Manages
    
    CanvasEngine *-- ViewportManager : Controls
    CanvasEngine *-- CoordinateSystem : Uses
    CanvasEngine *-- EventBus : Owns
    
    ViewportManager ..> EventBus : Emits viewport changed
    CoordinateSystem ..> ViewportManager : Transforms Coordinates
    
    ConfigsManager -- BasePlugin : Injects Configuration
    ComponentRegistry -- NodeLayerPlugin : Provides Components
    
    BasePlugin <|-- NodeLayerPlugin : Extends
    BasePlugin <|-- GridPlugin : Extends
    BasePlugin <|-- MinimapPlugin : Extends
    BasePlugin <|-- ToolbarPlugin : Extends
    BasePlugin <|-- NodePickerPlugin : Extends
    BasePlugin <|-- DebugPlugin : Extends
    
    %% Event Flow
    EventBus <.. NodeLayerPlugin : Listens node dragged
    EventBus <.. GridPlugin : Listens viewport changed
    EventBus <.. MinimapPlugin : Listens viewport changed
    EventBus <.. ToolbarPlugin : Listens toolbar action
    EventBus <.. NodePickerPlugin : Listens render requested
    
    %% Data Flow
    CanvasEngine --> NodeLayerPlugin : Provides Nodes
    ConfigsManager --> GridPlugin : Provides Grid Config
    ConfigsManager --> ToolbarPlugin : Provides UI Config
